# ArduGtk_cpp

./: .buildconfig  .goutputstream-068K2Z  .goutputstream-4P5G2Z  .goutputstream-6O6G2Z  .goutputstream-I2AL2Z  .goutputstream-LF5G2Z  .goutputstream-QB7G2Z  .goutputstream-RO7G2Z  .goutputstream-SUAL2Z  .goutputstream-UT4G2Z  ArduBoton.kdev4  Arduino_Y_Gtkmm.code-workspace  fjv.Ejercicios.ArduBoton.json  meson.build
.kdev4/: ArduBoton.kdev4
build_exe/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
build_exe/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-targets.json  intro-tests.json  meson-info.json
build_exe/meson-logs/: meson-log.txt
build_exe/src/: arduboton-resources.c  arduboton-resources.h
data/: fjv.Ejercicios.ArduBoton.appdata.xml.in  meson.build
host/share/applications/: fjv.Ejercicios.ArduBoton.desktop
host/share/glib-2.0/schemas/: fjv.Ejercicios.ArduBoton.gschema.xml  gschemas.compiled
po/: POTFILES  meson.build
src/: arduboton-window.cpp  arduboton-window.h  arduboton-window.ui  arduboton-window.ui~  arduboton.gresource.xml  main.cpp  meson.build
